changed name. changed button row and style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bird Catch Clicker Game">
   <meta name="author" content="halfimp">
 
-  <title>All that Birds</title>
+  <title>The Garden</title>
   
   <link rel="stylesheet" href="styles/css/styles.css">
   <link rel="stylesheet" href="styles/css/lib/bootstrap.min.css">
@@ -52,11 +52,11 @@
       </div>
     <div class="panel-actions">
       <ul class="my-actions">
-        <li><button id="btn-energy">Energy(+1)</button></li>
-          <li><button id="btn-exp">EXP(+1)</button></li>
-        <li><button id="btn-walk">Go for a Walk (-10)</button></li>
-        <li><button id="btn-summon">Summon Bird (-5)</button></li>
-        <li><button id="btn-watch">Visit Bird Nest (-15)</button></li>
+        <li><button id="btn-energy" class="btn-action">Energy(+1)</button></li>
+          <li><button id="btn-exp" class="btn-action">EXP(+1)</button></li>
+        <li><button id="btn-walk" class="btn-action">Go for a Walk (-10)</button></li>
+        <li><button id="btn-summon" class="btn-action">Summon Bird (-5)</button></li>
+        <li><button id="btn-watch" class="btn-action">Visit Bird Nest (-15)</button></li>
       </ul>
     </div>
     </div>
