--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>The Garden</title>
 
-    <link rel="stylesheet" href="styles/css/styles.css">
+    <link rel="stylesheet" href="styles/css/style.css">
     <link rel="stylesheet" href="styles/css/lib/bootstrap.min.css">
 
     <!--[if lt IE 9]>
@@ -26,15 +26,28 @@
             <div class="col-3"><span id="my-energy"></span></div>
         </div>
 
-
         <div class="scene">
             <h3>The Garden</h3>
             <p id="my-bird-names">No Birds here...</p>
             <div class="col-md-5" id="my-player">
-                <img src="">uu
+                <img src="">
+            </div>
+
+            <div class="panel-actions">
+                <ul class="my-actions">
+                    <li><button id="btn-energy" class="btn-action">Energy(+1)</button></li>
+                    <li><button id="btn-exp" class="btn-action">Test: EXP(+1)</button></li>
+                    <li><button id="btn-walk" class="btn-action">Go for a Walk (-10)</button></li>
+                    <li><button id="btn-summon" class="btn-action">Summon Bird</button></li>
+                    <li><button id="btn-watch" class="btn-action">Visit Bird Nest</button></li>
+                    <li><button id="btn-encounter">Test: Encounter</button>
+                    <button id="btn-nothing">do nothing</button>
+                    <button id="btn-feed">offer Corn</button>
+                    <button id="tame">try tame</button></li>
+                </ul>
             </div>
         </div>
-        <div class="encounter-scene">Test</div>
+        <div class="encounter-scene"></div>
 
         <div class="loggercontainer">
             <div class="inventory">
@@ -49,15 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel-actions">
-            <ul class="my-actions">
-                <li><button id="btn-energy" class="btn-action">Energy(+1)</button></li>
-                <li><button id="btn-exp" class="btn-action">EXP(+1)</button></li>
-                <li><button id="btn-walk" class="btn-action">Go for a Walk (-10)</button></li>
-                <li><button id="btn-summon" class="btn-action">Summon Bird (-5)</button></li>
-                <li><button id="btn-watch" class="btn-action">Visit Bird Nest (-15)</button></li>
-            </ul>
-        </div>
+
     </div>
 
 
